echoserver/echoserver.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: ealen/echo-server:latest
        imagePullPolicy: IfNotPresent
        name: echoserver
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/data"
          name: echoserver-vol
      volumes:
      - name: echoserver-vol
        persistentVolumeClaim:
          claimName: echoserver-pvc
