echoserver/echoserver.svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
  namespace: default
  annotations:
    load-balancer.hetzner.cloud/location: nbg1
    load-balancer.hetzner.cloud/use-private-ip: 'true'
    load-balancer.hetzner.cloud/name: 'echoserver-lb'
    load-balancer.hetzner.cloud/type: 'lb11'
spec:
  selector:
    app: echoserver
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
